bubba-backend (2.5~pre2) vincent hugo; urgency=low

  * update AppleVolumes.default (Closes: #117)

 -- Carl Fürstenberg <carl@excito.com>  Mon, 28 May 2012 14:29:09 +0200

bubba-backend (2.5~pre1) vincent hugo; urgency=low

  * utilize incron to reload samba in printcap change (Closes: #87)

 -- Carl Fürstenberg <carl@excito.com>  Wed, 16 May 2012 18:04:18 +0200

bubba-backend (2.4.2.2) vincent hugo; urgency=low

  * BIII-41: Update mdadm.conf when restoring RAID on new internal disk

 -- Carl Fürstenberg <carl@excito.com>  Fri, 27 Apr 2012 14:42:14 +0200

bubba-backend (2.4.2.1) vincent hugo; urgency=low

  * After converting to gpt, make sure we zap the disk

 -- Carl Fürstenberg <carl@excito.com>  Thu, 26 Apr 2012 15:49:30 +0200

bubba-backend (2.4.2) vincent hugo; urgency=low

  * Helper script to physically identify the box
  * add dependency for compat-wireless

 -- Carl Fürstenberg <carl@excito.com>  Thu, 12 Apr 2012 14:36:11 +0200

bubba-backend (2.4.1.1) vincent hugo; urgency=low

  * Replace the loading title with "Loading..."
  * Adding update of mdadm.conf

 -- Carl Fürstenberg <carl@excito.com>  Thu, 29 Mar 2012 12:03:55 +0200

bubba-backend (2.4.1) vincent hugo; urgency=low

  * Quick fix for minidlna iface change bug
  * Bumping release

 -- Carl Fürstenberg <carl@excito.com>  Mon, 19 Mar 2012 11:27:35 +0100

bubba-backend (2.4.0.11) vincent hugo; urgency=low

  * add lsb headers that insserv complains about

 -- Carl Fürstenberg <carl@excito.com>  Fri, 09 Mar 2012 17:32:03 +0100

bubba-backend (2.4.0.10) vincent hugo; urgency=low

  * rename init file

 -- Carl Fürstenberg <carl@excito.com>  Fri, 09 Mar 2012 17:28:19 +0100

bubba-backend (2.4.0.9) vincent; urgency=low

  * adding script to convert the broken gpt to mbr for b2

 -- Carl Fürstenberg <carl@excito.com>  Fri, 09 Mar 2012 16:22:58 +0100

bubba-backend (2.4.0.8) vincent; urgency=low

  * drop the old raid metadata

 -- Carl Fürstenberg <carl@excito.com>  Tue, 06 Mar 2012 13:53:07 +0100
