@@ -12,6 +12,9 @@ services/ssh.service /usr/share/bubba-configs
 services/webadmin.service /usr/share/bubba-configs
 services/afpd.service /usr/share/bubba-configs
 
+airprint-generate /usr/bin
+new_printer_init.sh /usr/share/bubba-backend
+
 dhclient-fallback/fallback /etc/dhcp/dhclient-exit-hooks.d/
 dhclient-fallback/firewall_rewrite /etc/dhcp/dhclient-exit-hooks.d/
 
