@@ -1,0 +1,5 @@
+#!/bin/sh
+
+rm -f /etc/avahi/services/printer_*
+airprint-generate --directory=/etc/avahi/services/ --prefix=printer_
+service samba reload
