@@ -1,3 +1,9 @@
+bubba-backend (2.5~pre3) vincent hugo; urgency=low
+
+  * Add AirPrint Support (Closes: #80)
+
+ -- Carl Fürstenberg <carl@excito.com>  Mon, 28 May 2012 15:32:49 +0200
+
 bubba-backend (2.5~pre2) vincent hugo; urgency=low
 
   * update AppleVolumes.default (Closes: #117)
